(multi-os-engine/multi-os-engine#154)  Backport some JDK 11 `java.time` APIs.